# Quantum-Drop-

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Readme.md  codex-auto.sh  eslint.config.js  index.html  package-lock.json  package.json  progress.md  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts  vitest.setup.ts  量子跃迁用户体验设计.md
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  PROJECT_BLUEPRINT.md  QUANTUM_UI.md  SECURITY.md  app.sample.yaml  ble-discovery-roadmap.md  i18n.md  quantum-visual-design.md  release.md
examples/: app.sample.yaml  pot.sample.json
scripts/: appmode_legacy.sh  appmode_minimal.sh  check.sh  dev.sh  tauri_build_stable.sh
server/payment-gateway/: README.md  package.json  tsconfig.json
server/payment-gateway/src/: express-shim.d.ts  index.ts  license.ts  tweetnacl-shim.d.ts
signaling-server/: deno.json  main.ts
signaling-server-cf/: package-lock.json  package.json  wrangler.toml
signaling-server-cf/src/: index.ts
src/: App.test.tsx  App.tsx  AppNew.test.tsx  AppNew.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  test_output.txt
src-tauri/capabilities/: ble.json  default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  lib.rs  main.rs  metrics.rs  resume.rs  security.rs
src-tauri/src/attestation/: merkle.rs  mod.rs  pot.rs
src-tauri/src/audit/: mod.rs
src-tauri/src/commands/: mod.rs  state.rs  types.rs
src-tauri/src/crypto/: mod.rs  session.rs
src-tauri/src/license/: mod.rs  storage.rs  types.rs  validator.rs
src-tauri/src/services/: ble_protocol.rs  discovery.rs  mdns.rs  migration.rs  mod.rs
src-tauri/src/signaling/: mod.rs  server.rs
src-tauri/src/store/: identity.rs  mod.rs
src-tauri/src/transport/: adapter.rs  mod.rs  quic.rs  router.rs  webrtc.rs
src-tauri/src/transport/relay/: mod.rs
src-tauri/tests/: license_flow.rs  relay_integration.rs  transport_integration.rs
src/components/: HistoryPanel.test.tsx  HistoryPanel.tsx  QuantumBackground.tsx  QuantumDragZone.test.tsx  QuantumDragZone.tsx  QuantumDropzone.test.tsx  QuantumDropzone.tsx  QuantumStatusIndicator.tsx  QuantumTunnel.tsx  ReceiptView.tsx  ReceivePanel.tsx  SendPanel.test.tsx  SendPanel.tsx  SettingsPanel.tsx  StarfieldBackground.tsx  UpgradePrompt.tsx
src/components/ColorBends/: ColorBends.tsx  index.ts
src/components/ErrorBoundary/: PanelBoundary.tsx  index.tsx
src/components/GridScan/: GridScan.css  GridScan.tsx
src/components/Hyperspeed/: Hyperspeed.css  Hyperspeed.tsx
src/components/Layout/: Header.tsx  MainLayout.tsx  Sidebar.tsx  TopNav.tsx  layout.css  types.ts
src/components/LocaleSwitch/: index.tsx
src/components/MinimalUI/: MinimalUI.css  MinimalUI.tsx  index.ts
src/components/Pages/: IdentityPage.tsx  LogsPage.tsx  SendPage.tsx  TransferStatusPage.tsx  WebRTCPage.tsx
src/components/QRCode/: QRCode.tsx  index.ts
src/components/QRScanner/: QRScanner.css  QRScanner.tsx  index.ts
src/components/ReceivePanel/: ReceivePanel.css  ReceivePanel.tsx  index.ts
src/components/SettingsPanel/: SettingsPanel.css  SettingsPanel.tsx  index.ts
src/components/WormholePortal/: WormholePortal.css  WormholePortal.tsx  index.ts
src/hooks/: useAuth.ts
src/lib/: dialog.ts  errors.test.ts  errors.ts  format.ts  friendsStore.ts  i18n.tsx  identityVault.ts  pairingCode.ts  quantumPhases.ts  quantumSound.ts  types.ts  upgrade.ts  webrtcSignaling.ts  wordlist.ts
src/store/: useTransfersStore.test.ts  useTransfersStore.ts
src/test/mocks/: tauri-dialog.ts
tauri-plugin-ble/: Cargo.toml  build.rs
tauri-plugin-ble/android/: build.gradle.kts
tauri-plugin-ble/android/src/main/: AndroidManifest.xml
tauri-plugin-ble/android/src/main/java/com/aetheros/quantumdrop/ble/: BlePlugin.kt
tauri-plugin-ble/ios/: Package.swift
tauri-plugin-ble/ios/Sources/: BlePlugin.swift
tauri-plugin-ble/permissions/: default.toml
tauri-plugin-ble/permissions/autogenerated/: reference.md
tauri-plugin-ble/permissions/autogenerated/commands/: read_sender_info.toml  start_scanning.toml  stop_scanning.toml
tauri-plugin-ble/permissions/schemas/: schema.json
tauri-plugin-ble/src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
