[package]
name = "quantum-drop"
version = "0.1.8"
edition = "2021"
rust-version = "1.77"
default-run = "quantum-drop"

[features]
default = ["transport-quic", "transport-webrtc", "transport-relay"]
transport-quic = ["dep:quinn", "dep:rcgen"]
transport-webrtc = ["dep:webrtc"]
transport-relay = []
signaling-server = ["dep:axum"]

[dependencies]
tauri = { version = "2.9.1", features = ["devtools", "test"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
bincode = "1.3"
blake3 = "1.5"
sha2 = "0.10"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
rand = "0.8"
rand_core = "0.6"
thiserror = "1.0"
tokio = { version = "1.39", features = ["macros", "rt-multi-thread", "sync", "time", "fs", "io-util", "net"] }
uuid = { version = "1", features = ["v4", "fast-rng", "serde"] }
hex = "0.4"
anyhow = "1.0"
tauri-plugin-dialog = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
quinn = { version = "0.11", default-features = false, features = ["rustls", "runtime-tokio"], optional = true }
rcgen = { version = "0.13", optional = true }
webrtc = { version = "0.11", default-features = false, optional = true }
futures = "0.3"
rustls = { version = "0.23", default-features = false, features = ["std"] }
serde_yaml = "0.9"
axum = { version = "0.7", features = ["ws"], optional = true }
log = "0.4"
bytes = "1"
ed25519-dalek = { version = "2.2", features = ["rand_core"] }
if-addrs = "0.13"
mdns-sd = { version = "0.11", features = ["async"] }
tokio-tungstenite = { version = "0.21", default-features = false, features = ["rustls-tls-webpki-roots", "connect"] }
url = "2.5"
humantime = "2.1"
x25519-dalek = { version = "2", default-features = false, features = ["reusable_secrets", "zeroize", "serde"] }
chacha20poly1305 = { version = "0.10", features = ["std"] }

[dev-dependencies]
tempfile = "3.10"

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }
