[package]
name = "tauri-plugin-ble"
version = "0.1.0"
edition = "2021"
links = "tauri-plugin-ble"

[lib]
name = "tauri_plugin_ble"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", default-features = false }
thiserror = "1"
log = "0.4"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }
